feat: some advances on the ui

--- a/index.html
+++ b/index.html
@@ -5,14 +5,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="guard.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>KFC</h1>
-    <select name="" id="theme">
-        <option id="darkTheme" value="">Dark</option>
-        <option id="lightTheme" value="">Light</option>
-    </select>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img class="img-fluid" src="assets/Logo.png" alt="">
+            </div>
+            <div class="row-cols-2 d-flex">
+                <div class="col-6">
+                    <select class="form-select" name="" id="theme">
+                        <option value="">Language</option>
+                        <option value="dark">Spanish</option>
+                        <option value="light">English</option>
+                    </select>
+                </div>
+                <div class="col-6">
+                    <select class="form-select" name="" id="theme">
+                        <option value="">Theme</option>
+                        <option value="dark">Dark</option>
+                        <option value="light">Light</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="row my-3">
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row my-3">
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">ldsakdsaks</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <a href="" class="btn btn-danger">Buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
