chore: the github user was changed

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
                     <div class="card-body">
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestsias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
                         <a href="" class="btn btn-danger">Buy</a>
                     </div>
                 </div>
