chore: validations were added on the form inputs

--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <input class="form-control" type="text" id="email">
                 <label class="form-label" for="">Password</label>
                 <input class="form-control" type="text" id="password">
-                <button class="btn btn-danger container-fluid  my-3" id="sendButton">Send</button>
+                <button class="btn btn-danger container-fluid  my-3" id="sendButton">Log In</button>
             </form>
         </div>
     </div>
