--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
     <script src="guard.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="container">
@@ -16,101 +19,109 @@
             </div>
             <div class="row-cols-2 d-flex">
                 <div class="col-6">
-                    <select class="form-select" name="" id="theme">
-                        <option value="">Language</option>
+                    <select class="form-select" name="" id="language">
+                        <option selected value="">Language</option>
                         <option value="dark">Spanish</option>
                         <option value="light">English</option>
                     </select>
                 </div>
                 <div class="col-6">
                     <select class="form-select" name="" id="theme">
-                        <option value="">Theme</option>
+                        <option selected value="">Theme</option>
                         <option value="dark">Dark</option>
                         <option value="light">Light</option>
                     </select>
                 </div>
             </div>
         </div>
-        <div class="row my-3">
+        <div class="row my-5">
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-1.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-2.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-3.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-4.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row my-3">
+        <div class="row my-5">
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-5.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-6.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-7.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis</p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="assets/hamburguesa-1.webp" class="card-img" alt="">
+                    <img src="assets/hamburguesa-8.webp" class="card-img p-3" alt="">
                     <div class="card-body">
+                        <h5 class="card-title">$3,123</h5>
                         <h5 class="card-title">ldsakdsaks</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis modi reiciendis quidem unde sunt deleniti, molestsias fugiat saepe perferendis quos. Suscipit quisquam iusto impedit doloremque?</p>
-                        <a href="" class="btn btn-danger">Buy</a>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eum accusantium illum, dolorem quis </p>
+                        <a href="" class="btn btn-danger col-3">Buy</a>
                     </div>
                 </div>
             </div>
